--- a/calender-2.html
+++ b/calender-2.html
@@ -20,6 +20,8 @@
             color:black;
             gap:20px;
             width:80%;
+            padding:5px;
+            border-radius: 5px;
             
         }
         .date,.day{
@@ -65,6 +67,15 @@
           
 
         }
+        .highlite{
+            height:40px;
+            width: 40px;
+            background-color: gray;
+            border-radius: 50%;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+        }
         .footer{
             grid-column: 1 / -1;
             grid-row: 8 / -1;
@@ -94,7 +105,8 @@
         <div class="day">Sat</div>
         <div class="date color">30</div>
         <div class="date color">31</div>
-        <div class="date">1</div>
+        <div class="date "><div class="highlite">1</div>
+            </div>
         <div class="date">2</div>
         <div class="date">3</div>
         <div class="date">4</div>
